--- a/form.html
+++ b/form.html
@@ -1,4 +1,8 @@
+<!DOCTYPE html>
 <html>
+<style>
+ input,textarea,fieldset{border: 0.5px solid #9370DB}
+</style>
 	<body>
 		<!-- method를 생략하면 get이 default값 -->
 		<form action="form.php" method="post"><!-- 사용자가 입력한 정보를 url 파라미터로 만들어냄 -->
